tags titulo e parágrafo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-Conhecendo o Universo 
+<h1> Conhecendo o Universo </h1>
 
-Acredita-se que o Universo originou-se de uma grande explosão…
-…O Big Bang
-blá blá blá 
+<p> Acredita-se que o Universo originou-se de uma grande explosão…
+    …O Big Bang </p>
