ajustes de configurações

--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
-<h1> Conhecendo o Universo </h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <title> Turma L formadores </title>
+</head>
+<body>
+    <h1> Conhecendo o Universo </h1>
 
-<p> Acredita-se que o Universo originou-se de uma grande explosão…
-    …O Big Bang </p>
+
+    <p> Acredita-se que o Universo originou-se de uma grande explosão…
+        …O Big Bang </p>
+    
+</body>
+
+
+
+
+</html>
+<link rel="stylesheet" href="style.css">
+
