--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <p> Acredita-se que o Universo originou-se de uma grande explosão…
         …O Big Bang </p>
-    
+    Alt + Z = marcação de parágrafo
 </body>
 
 
