--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <title> Turma L formadores </title>
 </head>
 <body>
+    /*Anotações*/
+
     <h1> Conhecendo o Universo </h1>
 
 
     <p> Acredita-se que o Universo originou-se de uma grande explosão…
         …O Big Bang </p>
+
+        Antes de tudo, é importante ressaltar que há duas teorias sobre a origem do universo: <strong>a teoria Evolucionista ou Científica e a teoria Criacionista ou Religiosa</strong>. Como a segunda, refere-se a crenças, no caso, religião, para não interferir neste âmbito pessoal, a teoria Evolucionista é a que utilizaremos como referência.
     Alt + Z = marcação de parágrafo
 </body>
 
