--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
 <body>
     
 
-    <h1> Conhecendo o Universo </h1>
-
+    <h1 id="tituloprincipal"> Conhecendo o Universo </h1>
+<img src="big-bang.jpg" alt="Explosão do Big Bang">
     <p>Antes de tudo, é importante ressaltar que há duas teorias sobre a origem do universo: <strong>a teoria Evolucionista ou Científica e a teoria Criacionista ou Religiosa</strong></p>. 
     <p>Como a segunda, refere-se a crenças, no caso, religião, para não interferir neste âmbito pessoal, a teoria Evolucionista é a que utilizaremos como referência.</p>
-  
-  
-  
   
   
     <p> Acredita-se que o Universo originou-se de uma grande explosão…
