--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
 
     <h1 id="tituloprincipal"> Conhecendo o Universo </h1>
-<img src="big-bang.jpg" alt="Explosão do Big Bang">
+    Antes de tudo, é importante ressaltar que há duas teorias sobre a origem do universo: <strong>a teoria Evolucionista ou Científica e a teoria Criacionista ou Religiosa</strong>. Como a segunda, refere-se a crenças, no caso, religião, para não interferir neste âmbito pessoal, a teoria Evolucionista é a que utilizaremos como referência.
     <p>Antes de tudo, é importante ressaltar que há duas teorias sobre a origem do universo: <strong>a teoria Evolucionista ou Científica e a teoria Criacionista ou Religiosa</strong></p>. 
     <p>Como a segunda, refere-se a crenças, no caso, religião, para não interferir neste âmbito pessoal, a teoria Evolucionista é a que utilizaremos como referência.</p>
   
