--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         …O Big Bang </p>
 <img src="big-bang.jpg" alt="Explosão do Big Bang">
        
-    Alt + Z = marcação de parágrafo
+    <p>Alt + Z = marcação de parágrafo</p>
 </body>
 
 
