--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <h1 id="tituloprincipal"> Conhecendo o Universo </h1>
   
-    <p>Antes de tudo, é importante ressaltar que há duas teorias sobre a origem do universo: <strong>a teoria Evolucionista ou Científica e a teoria Criacionista ou Religiosa</strong></p>. 
+    <p class="roxo">Antes de tudo, é importante ressaltar que há duas teorias sobre a origem do universo: <strong>a teoria Evolucionista ou Científica e a teoria Criacionista ou Religiosa</strong></p>. 
     <p>Como a segunda, refere-se a crenças, no caso, religião, para não interferir neste âmbito pessoal, a teoria Evolucionista é a que utilizaremos como referência.</p>
   
   
