--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
   
     <p class="roxo">Antes de tudo, é importante ressaltar que há duas teorias sobre a origem do universo: <strong>a teoria Evolucionista ou Científica e a teoria Criacionista ou Religiosa</strong></p>. 
     <p>Como a segunda, refere-se a crenças, no caso, religião, para não interferir neste âmbito pessoal, a teoria Evolucionista é a que utilizaremos como referência.</p>
-  
-  
+    <p>Na astronomia, o Universo corresponde ao conjunto de toda a matéria, energia, espaço e tempo existente.</p>
+
+
     <p> Acredita-se que o Universo originou-se de uma grande explosão…
         …O Big Bang </p>
 <img src="big-bang.jpg" alt="Explosão do Big Bang">
-       
+       <p>Na astronomia, o Universo corresponde ao conjunto de toda a matéria, energia, espaço e tempo existente.
+
+        Ele reúne os astros: planetas, cometas, estrelas, galáxias, nebulosas, satélites, dentre outros.</p>
     <p>Alt + Z = marcação de parágrafo</p>
 </body>
 
