--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
     <p> Acredita-se que o Universo originou-se de uma grande explosão…
         …O Big Bang </p>
 <img src="big-bang.jpg" alt="Explosão do Big Bang">
-       <p>Na astronomia, o Universo corresponde ao conjunto de toda a matéria, energia, espaço e tempo existente.
+
+<p>"A teoria do Big Bang descreve a origem do Universo a partir da explosão violenta de uma partícula muito densa e extremamente quente que teve início há 13,8 bilhões de anos, aproximadamente. Essa expansão não cessou, o que pode ser observado por meio do afastamento das galáxias.
+
+Essa é a teoria mais aceita pela comunidade científica para o surgimento do Universo, tendo sido elaborada na década de 1920 e aperfeiçoada à medida que os estudos sobre o cosmos foram se tornando mais complexos. Existem elementos que atestam a teoria do Big Bang, mas os trabalhos que buscam por novos indícios da sua ocorrência continuam"
+
+Veja mais sobre "Big Bang" em: https://brasilescola.uol.com.br/geografia/big-bang.htm </p>
+
 
         Ele reúne os astros: planetas, cometas, estrelas, galáxias, nebulosas, satélites, dentre outros.</p>
     <p>Alt + Z = marcação de parágrafo</p>
