--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title> Turma L formadores </title>
 </head>
+<!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->
+
 <body>
     
 
@@ -15,7 +17,7 @@
 
 
     <p> Acredita-se que o Universo originou-se de uma grande explosão…
-        …<strong>Big Bang</strong></p>
+        …<strong>O Big Bang</strong></p>
 <img src="big-bang.jpg" alt="Explosão do Big Bang">
 
 <p>"A teoria do Big Bang descreve a origem do Universo a partir da explosão violenta de uma partícula muito densa e extremamente quente que teve início há 13,8 bilhões de anos, aproximadamente. Essa expansão não cessou, o que pode ser observado por meio do afastamento das galáxias.
